# ios-smalltalk

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Config.xcconfig  LICENSE  Local.xcconfig.example  PRIVACY.md  README.md  THIRD_PARTY_LICENSES
.claude/skills/: device-geometry.md
PharoVMCore.xcframework/: Info.plist
docs/: JIT_implementation.md  JIT_left_to_do.md  JIT_plans.md  SistaV1-Bytecode-Spec.md  WIP-asm-trampoline.md  WIP.md  benchmark-results.md  building-standalone-apps.md  bytecode-pair-profile.tsv  changes.md  contact_education.md  higher_level_tests.md  image_issues.md  known-issues.md  optimizations-mar-31.md  optimizations.md  performance.md  pharo14-support.md  programmers-overview.md  pseudo-jit.md  standalone-apps.md  startup-system.md  subpixel-rendering.md  test-results.md  test-suite-gaps.md  test-workarounds.md  testflight-feedback-build20.md  timeout-review.md  upstream-proposals.md
docs/performance/: 20260411.txt
experiments/PharoWaveSim/: README.md  WaveSimulation.mm  wavesim.st
iospharo/: Info.plist
iospharo.xcodeproj/: project.pbxproj
iospharo.xcodeproj/xcshareddata/xcschemes/: iospharo.xcscheme
iospharo/App/: ContentView.swift  iosparoApp.swift
iospharo/Assets.xcassets/AccentColor.colorset/: Contents.json
iospharo/Bridge/: CoreMotionManager.swift  PharoBridge.swift  iospharo-Bridging-Header.h
iospharo/Export/: AppExporter.swift  AppTemplates.swift  ExportAppSheet.swift  XcodeProjGenerator.swift
iospharo/Image/: ImageManager.swift  PharoImage.swift
iospharo/Metal/: MetalRenderer.swift  Shaders.metal
iospharo/Views/: AcknowledgementsView.swift  AutoLaunchSplashView.swift  DownloadProgressRow.swift  ImageLibraryView.swift  ImageRow.swift  NewImageView.swift  PharoCanvasView.swift  SettingsView.swift
iospharo/WaveSim/: WaveShaders.metal
resources/: startup.st  wavesim.st
resources/ios/: Info.plist.in
scripts/: PrimitiveTableExporter.st  README.md  SimpleFormWorldRenderer.st  apply_device_mask.py  arb_precision_diag.st  build-libffi.sh  build-sdl2.sh  build-third-party.sh  build-xcframework.sh  discover_test_packages.st  export_primitives.py  extract_stencils.py  launch-vmmaker.sh  leak_test_windows.st  pkg_test_runner.st  run_addon_tests.st  run_all_tests.sh  run_batch_tests.sh  run_benchmarks.sh  run_benchmarks.st  run_callback_suite.st  run_callback_tests.st  run_package_tests.sh  run_regression_tests.st  test-mac-catalyst.sh  test_bitblt_depth.st  test_bitblt_translucent.st  test_menu_items.st  test_network.st  test_traits.st  time_tests.st  vm_integration_tests.st
src/include/: cogit.h  cogmethod.h  cointerp.h  cointerp.hpp  config.h  interp.h  vmCallback.h  vmMemoryMap.h  vmRememberedSet.h
src/include/iospharo/: iosDisplay.h
src/include/pharovm/: config.h  sqNamedPrims.h
src/ios/: cointerp-cpp.c  generated_primitives.inc  oop.hpp  primitives.json
src/ios/vm/include/: interp.h  vmCallback.h  vmMemoryMap.h  vmRememberedSet.h
src/ios/vm/src/: interp.c
src/platform/: DisplaySurface.hpp  EventQueue.cpp  EventQueue.hpp  MotionData.cpp  MotionData.h  PlatformBridge.cpp  PlatformBridge.h  VMParameters.h  iOSBridge.cpp  test_ios_bridge.cpp  test_platform.cpp
src/smalltalk/: OSiOSDriver.st  README.md  iOSWorldRenderer.st  install-ios-driver.st  setup-ios-image.st
src/vm/: FFI.cpp  FFI.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageWriter.cpp  ImageWriter.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterProxy.cpp  InterpreterProxy.h  ObjCExceptionGuard.h  ObjCExceptionGuard.m  ObjectHeader.hpp  ObjectMemory.cpp  ObjectMemory.hpp  Oop.hpp  Primitives.cpp  WaveSimulation.h  WaveSimulation.mm  WorldRenderer.cpp  WorldRenderer.hpp  test_class_table.cpp  test_load_image.cpp
src/vm/jit/: CodeZone.cpp  CodeZone.hpp  JITCompiler.cpp  JITCompiler.hpp  JITConfig.hpp  JITMethod.hpp  JITRuntime.cpp  JITRuntime.hpp  JITState.hpp  PlatformJIT.hpp  Stencil.hpp  TrampolineAsm.S  TrampolineAsm.hpp  generated_stencils.hpp  generated_stencils_arm64.hpp  generated_stencils_x86_64.hpp
src/vm/jit/stencils/: stencils.cpp
src/vm/plugins/: B2DPlugin.c  DSAPrims.c  JPEGReaderPlugin.c  MIDIPlugin.cpp  MIDIPlugin.h  SocketPlugin.cpp  SocketPlugin.h  SoundPlugin.cpp  SoundPlugin.h  SqueakSSL.c  SqueakSSL.h  config.h  interp.h  sq.h  sqConfig.h  sqMacSSL.c  sqMemoryAccess.h  sqPlatformSpecific.h  sqVirtualMachine.h
src/vm/plugins/jpeg/: JPEGReadWriter2Plugin.c
src/vm/plugins/pharovm/: debug.h  exportDefinition.h
src/vm/plugins/testlib/: testLibrary.h
